# semantic-organizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: basic_usage.py
semantic_organizer/: __init__.py  clusterer.py  controller.py  embedder.py  extractor.py  labeler.py  store.py
